<resources>
    <string name="app_name">Durak Game</string>
    <string name="textview">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="durakgame">Durak Game</string>
    <string name="log_in">L o g i n</string>
    <string name="register">If you have not account, register here</string>
    <string name="forgetpassword">Forget password ? </string>
    <string name="password">Password</string>
    <string name="birthday">Date Of Birth</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="contactus">contactus</string>
    <string name="email_example_com">email@example.com</string>
    <string name="full_name">FULL NAME</string>
    <string name="gender">Gender</string>
    <string name="share_thoughts_with_your_friends">Share thoughts with your friends</string>
    <string name="share">Share</string>
    <string name="write_your_message">Write your message</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="score">Score : %d</string>
    <string name="result_score">Score: %d</string>
    <string name="result_title">GAME OVER</string>
    <string name="high_score">High Score: %d</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="level">Level: %d</string>
    <string name="coin">COIN: %d</string>
    <string name="xp">XP: %d</string>
    <string name="t_r_y_a_g_a_i_n">T R Y A G A I N</string>
    <string name="coinstart">COIN: %d</string>
    <string name="levelstart">LEVEL: %d</string>
    <string name="highscorestart">HIGHSCORE: %d</string>
    <string name="leader_board">Leader Board</string>
    <string name="users_with_the_most_levels">Users with the most levels</string>
    <string name="the_game_has_its_own_currency_called_coins_the_coin_is_calculated_as_score_30_the_score_measures_how_many_red_and_green_points_are_collected_from_the_game_the_game_is_over_when_the_player_hits_the_bomb_there_are_levels_in_the_game_that_measure_the_success_of_the_users_level_is_calculated_with_xp_if_xp_reaches_100_it_will_increase_one_level_xp_is_calculated_as_points_20_after_the_game_is_over_the_previous_game_results_are_displayed_when_the_game_starts_all_the_coins_and_level_belonging_to_the_user_are_shown">The game has its own currency called coins. The coin is calculated as Score / 30. The score measures how many red and green points are collected from the game. The game is over when the player hits the bomb. There are levels in the game that measure the success of the users. Level is calculated with XP. If xp reaches 100, it will increase one level. XP is calculated as: points / 20. After the game is over, the previous game results are displayed. When the game starts, all the coins and level belonging to the user are shown.</string>
    <color name="backgroundcolor">#0c6339</color>
    <color name="textcolor">#000000</color>
    <color name="err">#FF0000</color>
    <color name="placeholdercolor">#282c34</color>
    <color name="btncolor">#3bc3e0</color>
</resources>