<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/prfback">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="738dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/whitebox"
        android:elevation="40dp"
        android:orientation="vertical">


        <TextView

            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/sign_in"
            android:textColor="@color/textcolor"
            android:textSize="50sp"
            android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <EditText

            android:id="@+id/emaillgn"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:cursorVisible="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/placeholdercolor"
            android:textColorHint="@color/placeholdercolor" />
        </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:passwordToggleEnabled="true">

        <EditText

            android:id="@+id/passwordlgn"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:cursorVisible="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/placeholdercolor"
            android:textColorHint="@color/placeholdercolor" />
</com.google.android.material.textfield.TextInputLayout>

        <TextView

            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text=""
            android:textColor="@color/err"
            android:textSize="15dp"
            android:textStyle="bold" />


        <Button

            android:id="@+id/sign_in"
            style="@android:style/Widget.Button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="0dp"
            android:background="#3bc3e0"
            android:cursorVisible="true"
            android:onClick="onClick"
            android:radius="100dp"
            android:text="@string/log_in"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:onClick="onClick"
            android:text="@string/register"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/forgetpassword"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textviewround"
            android:gravity="center"
            android:text=" OR "
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"/>

    </LinearLayout>

</RelativeLayout>