<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser"
    android:background="@color/prfback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="861dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-19dp"
        android:layout_marginBottom="-72dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/whitebox"
            android:elevation="50dp"
            android:orientation="vertical">
            <TextView

                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:textColor="@color/textcolor"
                android:text="Eat the Ball"
                android:textSize="50sp"
                android:textStyle="bold"
                />

            <TextView

                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/sign_up"
                android:textColor="@color/textcolor"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/fullname"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:textColor="@color/placeholdercolor"
                android:textColorHint="@color/placeholdercolor" />

            <EditText

                android:id="@+id/age"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:hint="@string/mobile_number"
                android:inputType="textPersonName"
                android:textColor="@color/placeholdercolor"
                android:textColorHint="@color/placeholdercolor" />

            <EditText

                android:id="@+id/email"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/placeholdercolor"
                android:textColorHint="@color/placeholdercolor" />

            <EditText
                android:id="@+id/Birthday"
                android:layout_width="291dp"
                android:layout_height="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textColor="@color/placeholdercolor"
                android:textColorHint="@color/placeholdercolor"
                android:focusableInTouchMode="false"
                android:hint="@string/birthday" />

            <EditText

                android:id="@+id/password"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/placeholdercolor"
                android:textColorHint="@color/placeholdercolor" />

            <EditText

                android:id="@+id/confirmpassword"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:cursorVisible="true"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:textColor="@color/placeholdercolor"
                android:textColorHint="@color/placeholdercolor" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_marginLeft="150dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"/>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"/>
            </RadioGroup>

            <Button

                android:id="@+id/registerUser"
                style="@android:style/Widget.Button"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:background="#3bc3e0"
                android:cursorVisible="true"
                android:onClick="onClick"
                android:radius="100dp"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="normal|bold" />


            <TextView

                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text=" "
                android:textColor="@color/textcolor"
                android:textSize="50sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>